--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-cli-theater",
+  "name": "ember-theater",
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
