--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "ember-cli-qunit": "0.3.13",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.18",
+    "ember-data-fixture-adapter": "1.0.0",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-inflector": "1.6.2",
     "ember-try": "0.0.6"
   },
   "keywords": [
