--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.13",
+    "ember-cli-qunit": "0.3.14",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.18",
-    "ember-data-fixture-adapter": "1.0.0",
+    "ember-data": "1.13.2",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
@@ -42,7 +41,7 @@
     "broccoli-merge-trees": "^0.2.1",
     "broccoli-static-compiler": "^0.2.1",
     "ember-cli-babel": "^5.0.0",
-    "ember-cli-htmlbars": "0.7.6",
+    "ember-cli-htmlbars": "0.7.9",
     "velocity-animate": "^1.2.2"
   },
   "ember-addon": {
