--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "broccoli-static-compiler": "^0.2.1",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-htmlbars": "0.7.9",
+    "node-buzz": "^1.1.4",
     "velocity-animate": "^1.2.2"
   },
   "ember-addon": {
