--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-inflector": "1.6.2",
+    "ember-resize": "0.0.8",
     "ember-try": "0.0.6"
   },
   "keywords": [
