--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-cli-babel": "^5.0.0",
     "ember-cli-htmlbars": "0.7.9",
     "node-buzz": "^1.1.4",
+    "perfect-scrollbar": "^0.6.4",
     "velocity-animate": "^1.2.2"
   },
   "ember-addon": {
