--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-inflector": "1.6.2",
-    "ember-intl": "2.0.0-beta.17",
+    "ember-intl": "git@github.com:yahoo/ember-intl.git#30e68b502f77a25dda5915288205c6462bcfdff7",
     "ember-try": "0.0.6"
   },
   "keywords": [
