--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.14",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.13.4",
+    "ember-data": "2.0.0",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-inflector": "1.6.2",
-    "ember-intl": "git@github.com:yahoo/ember-intl.git#30e68b502f77a25dda5915288205c6462bcfdff7",
+    "ember-intl": "2.0.0-beta.21",
     "ember-try": "0.0.6"
   },
   "keywords": [
