--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "ember-theater",
   "dependencies": {
+    "babel-polyfill": "~0.0.1",
     "ember": "2.0.1",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.5",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
@@ -11,8 +12,8 @@
     "ember-resolver": "0.1.21",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "qunit": "~1.18.0",
-    "babel-polyfill": "~0.0.1"
+    "lokijs": "1.3.5",
+    "qunit": "~1.18.0"
   },
   "resolutions": {
     "ember": "^2.0.0"
