--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-sass": "git+https://github.com/dukex/ember-cli-sass.git#bugfix/addon-styles",
     "ember-keyboard-service": "0.3.0",
+    "lokijs": "^1.3.8",
     "node-buzz": "^1.1.4",
     "perfect-scrollbar": "^0.6.4",
     "velocity-animate": "^1.2.2"
