--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "ember-resolver": "0.1.21",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "lokijs": "1.3.5",
+    "lokijs": "~1.3.9",
     "qunit": "~1.18.0"
   },
   "resolutions": {
