--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,9 @@
     "document",
     "window",
     "-Promise",
-    "require"
+    "require",
+    "PerfectScrollbar",
+    "loki"
   ],
   "browser": true,
   "boss": true,
