--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "lokijs": "~1.3.9",
-    "qunit": "~1.18.0"
+    "qunit": "~1.18.0",
+    "font-awesome": "~4.4.0"
   },
   "resolutions": {
     "ember": "^2.0.0"
