--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-i18n": "4.1.3",
     "ember-inflector": "1.6.2",
-    "ember-intl": "2.0.0-beta.22",
     "ember-keyboard-service": "0.3.0",
     "ember-try": "0.0.6"
   },
