--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
     "ember-inflector": "1.6.2",
-    "ember-keyboard-service": "0.3.0",
+    "ember-key-responder": "0.4.2",
+    "ember-legacy-views": "0.2.0",
     "ember-try": "0.0.6"
   },
   "keywords": [
