--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
-    "ember-inflector": "1.6.2",
+    "ember-inflector": "1.9.3",
     "ember-key-responder": "0.4.2",
     "ember-legacy-views": "0.2.0",
     "ember-try": "0.0.6"
@@ -47,6 +47,8 @@
     "ember-cli-babel": "^5.1.5",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-sass": "git+https://github.com/dukex/ember-cli-sass.git#bugfix/addon-styles",
+    "glob": "^5.0.15",
+    "morgan": "^1.6.1",
     "node-buzz": "^1.1.4",
     "perfect-scrollbar": "^0.6.4",
     "velocity-animate": "^1.2.2"
