--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-theater",
   "dependencies": {
-    "ember": "2.0.1",
+    "ember": "components/ember#beta",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.5",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "2.0.0",
@@ -16,6 +16,6 @@
     "font-awesome": "~4.4.0"
   },
   "resolutions": {
-    "ember": "^2.0.0"
+    "ember": "beta"
   }
 }
