--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-inflector": "1.9.3",
     "ember-key-responder": "0.4.2",
     "ember-legacy-views": "0.2.0",
+    "ember-modal-dialog": "0.8.1",
     "ember-try": "0.0.6"
   },
   "keywords": [
