--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,21 @@
 {
   "name": "ember-theater",
   "dependencies": {
-    "ember": "components/ember#beta",
+    "ember": "2.1.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.5",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "2.0.0",
+    "ember-data": "2.1.0",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
     "ember-qunit": "0.4.10",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "0.1.21",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "lokijs": "~1.3.9",
+    "lokijs": "~1.3.10",
     "qunit": "~1.18.0",
     "font-awesome": "~4.4.0"
   },
   "resolutions": {
-    "ember": "beta"
+    "ember": "2.1.0"
   }
 }
