--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ember-export-application-global": "^1.0.2",
     "ember-i18n": "4.1.3",
     "ember-inflector": "1.9.3",
-    "ember-key-responder": "0.4.2",
+    "ember-keyboard": "0.0.3",
     "ember-legacy-views": "0.2.0",
     "ember-modal-dialog": "0.8.1",
     "ember-try": "0.0.6"
