--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
+    "ember-get-config": "0.0.2",
     "ember-i18n": "4.1.3",
     "ember-inflector": "1.9.3",
     "ember-keyboard": "0.0.3",
