--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "no-nested-ternary": 0,
     "no-restricted-syntax": [2, "WithStatement"],
     "no-ternary": 0,
+    "no-undefined": 0,
     "object-curly-spacing": [2, "always"],
     "space-before-function-paren": [2, "never"],
     "valid-jsdoc": [2, {
