--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ember-cli-babel": "^5.1.5",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-sass": "^5.1.0",
+    "ember-dynamic-stylesheet": "0.0.2",
     "glob": "^5.0.15",
     "morgan": "^1.6.1",
     "node-buzz": "^1.1.4",
