--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,10 @@
     "loader.js": "ember-cli/loader.js#3.2.1",
     "lokijs": "~1.3.10",
     "qunit": "~1.18.0",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "PreloadJS": "~0.6.1",
+    "SoundJS": "~0.6.1",
+    "progressbar.js": "~0.9.0"
   },
   "resolutions": {
     "ember": "2.1.0"
