--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-eslint": "1.2.1",
-    "ember-cli-font-awesome": "0.1.1",
+    "ember-cli-font-awesome": "1.4.0-beta.1",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "^1.0.4",
