--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "ember-modal-dialog": "0.8.1",
     "ember-try": "0.0.6",
     "eslint-config-ember": "0.2.0",
+    "ivy-codemirror": "1.3.0",
     "js-string-escape": "^1.0.0"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
+    "babel-standalone": "^1.0.0",
     "broccoli-merge-trees": "^0.2.3",
     "broccoli-static-compiler": "^0.2.2",
     "ember-cli-babel": "^5.1.5",
