--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "ember",
   "parser": "babel-eslint",
   "globals": {
+    "Babel": true,
     "createjs": true,
     "loki": true,
     "PerfectScrollbar": true,
@@ -14,6 +15,8 @@
     "brace-style": [2, "1tbs", { "allowSingleLine": true }],
     "consistent-return": 0,
     "indent": [2, 2, { "SwitchCase": 1 }],
+    "no-else-return": 0,
+    "no-eval": 0,
     "no-nested-ternary": 0,
     "no-restricted-syntax": [2, "WithStatement"],
     "no-ternary": 0,
