--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,15 @@
 {
   "name": "ember-theater",
   "dependencies": {
-    "ember": "2.1.0",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.5",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "2.1.0",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
-    "ember-qunit": "0.4.10",
-    "ember-qunit-notifications": "0.0.7",
-    "ember-resolver": "0.1.21",
-    "jquery": "1.11.1",
-    "loader.js": "ember-cli/loader.js#3.2.1",
+    "ember": "2.2.0",
+    "ember-cli-shims": "0.1.0",
+    "ember-cli-test-loader": "0.2.2",
+    "ember-load-initializers": "0.1.7",
+    "ember-qunit-notifications": "0.1.0",
+    "jquery": "1.11.3",
+    "loader.js": "^3.5.0",
     "lokijs": "~1.3.10",
-    "qunit": "~1.18.0",
+    "qunit": "1.18.0",
     "font-awesome": "~4.4.0",
     "PreloadJS": "~0.6.1",
     "SoundJS": "~0.6.1",
@@ -21,6 +18,7 @@
     "ember-cli-codemirror-shim": "~0.0.1"
   },
   "resolutions": {
-    "ember": "2.1.0"
+    "ember": "2.2.0",
+    "qunit-notifications": "~0.1.0"
   }
 }
