--- a/package.json
+++ b/package.json
@@ -19,24 +19,26 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^4.1.5",
-    "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "1.13.8",
-    "ember-cli-app-version": "0.3.3",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
+    "broccoli-asset-rev": "^2.2.0",
+    "ember-ajax": "0.7.1",
+    "ember-cli": "^2.2.0-beta.6",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-eslint": "1.2.1",
     "ember-cli-font-awesome": "1.4.0-beta.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.1.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "^1.0.4",
-    "ember-cli-uglify": "^1.0.1",
-    "ember-data": "2.1.0",
-    "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-dynamic-stylesheet": "0.0.2",
-    "ember-export-application-global": "^1.0.2",
-    "ember-i18n": "4.1.3",
-    "ember-try": "0.0.6",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "^1.1.0",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-sri": "^2.0.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "^2.3.0",
+    "ember-disable-prototype-extensions": "^1.0.1",
+    "ember-export-application-global": "^1.0.4",
+    "ember-i18n": "4.2.0",
+    "ember-resolver": "^2.0.3",
+    "ember-try": "~0.0.8",
     "eslint-config-ember": "0.2.0",
     "js-string-escape": "^1.0.0"
   },
@@ -48,9 +50,10 @@
     "broccoli-merge-trees": "^0.2.3",
     "broccoli-static-compiler": "^0.2.2",
     "ember-cli-babel": "^5.1.5",
-    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-sass": "^5.1.0",
     "ember-get-config": "0.0.2",
+    "ember-dynamic-stylesheet": "0.0.2",
     "ember-keyboard": "0.2.4",
     "ember-modal-dialog": "0.8.1",
     "glob": "^5.0.15",
