--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,17 @@
 {
   "name": "ember-theater",
   "dependencies": {
-    "ember": "2.3.0",
+    "ember": "~2.4.1",
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
-    "ember-load-initializers": "0.1.7",
     "ember-qunit-notifications": "0.1.0",
     "jquery": "1.11.3",
-    "loader.js": "^3.5.0",
     "lokijs": "~1.3.10",
-    "qunit": "1.18.0",
     "font-awesome": "~4.4.0",
     "PreloadJS": "~0.6.1",
     "SoundJS": "~0.6.1",
     "progressbar.js": "~0.9.0",
     "codemirror": "~4.8.0",
     "ember-cli-codemirror-shim": "~0.0.1"
-  },
-  "resolutions": {
-    "ember": "2.3.0",
-    "qunit-notifications": "~0.1.0"
   }
 }
