--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-hook": "0.1.1",
     "ember-i18n": "4.2.0",
+    "ember-keyboard": "0.2.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
     "ember-try": "~0.1.2",
@@ -56,7 +58,7 @@
     "ember-cli-sass": "^5.1.0",
     "ember-get-config": "0.0.2",
     "ember-dynamic-stylesheet": "0.0.2",
-    "ember-keyboard": "0.2.4",
+    "ember-keyboard": "0.2.7",
     "glob": "^5.0.15",
     "ivy-codemirror": "1.3.0",
     "morgan": "^1.6.1",
