--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "ember-resolver": "^2.0.3",
     "ember-try": "~0.1.2",
     "eslint-config-ember": "0.2.0",
+    "estraverse": "^4.2.0",
+    "estraverse-fb": "^1.3.1",
     "js-string-escape": "^1.0.0",
     "loader.js": "^4.0.0"
   },
