--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ember-cli-font-awesome": "1.4.2",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-moment-shim": "1.1.0",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.1.0",
@@ -40,6 +41,7 @@
     "ember-i18n": "4.2.0",
     "ember-keyboard": "0.2.4",
     "ember-load-initializers": "^0.5.0",
+    "ember-moment": "6.1.0",
     "ember-resolver": "^2.0.3",
     "ember-try": "~0.1.2",
     "eslint-config-ember": "0.2.0",
