--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "glob": "^5.0.15",
     "ivy-codemirror": "1.3.0",
     "morgan": "^1.6.1",
-    "perfect-scrollbar": "^0.6.4",
+    "perfect-scrollbar": "0.6.11",
     "velocity-animate": "^1.2.2"
   },
   "ember-addon": {
