--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "ember-hook": "0.0.4",
     "ember-i18n": "4.2.0",
     "ember-load-initializers": "^0.5.0",
+    "ember-lokijs": "0.0.3",
+    "ember-message-bus": "0.0.3",
     "ember-moment": "6.1.0",
+    "ember-multiton-service": "0.0.3",
     "ember-resolver": "^2.0.3",
     "ember-try": "~0.1.2",
     "eslint-config-ember": "0.2.0",
