add tests for ember-theater

--- a/package.json
+++ b/package.json
@@ -37,13 +37,10 @@
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
-    "ember-hook": "0.0.4",
+    "ember-hook": "https://github.com/Ticketfly/ember-hook#60a6391bfe71ee4f42772bfb9d4916939ed3a59f",
     "ember-i18n": "4.2.0",
     "ember-load-initializers": "^0.5.0",
-    "ember-lokijs": "0.0.3",
-    "ember-message-bus": "0.0.3",
     "ember-moment": "6.1.0",
-    "ember-multiton-service": "0.0.3",
     "ember-resolver": "^2.0.3",
     "ember-try": "~0.1.2",
     "eslint-config-ember": "0.3.0",
@@ -65,6 +62,9 @@
     "ember-get-config": "0.0.2",
     "ember-dynamic-stylesheet": "0.0.2",
     "ember-keyboard": "1.1.0",
+    "ember-lokijs": "0.0.3",
+    "ember-message-bus": "0.0.3",
+    "ember-multiton-service": "0.0.6",
     "glob": "^5.0.15",
     "ivy-codemirror": "1.3.0",
     "morgan": "^1.6.1",
