--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,6 @@
     "ember": "~2.4.1",
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0",
-    "lokijs": "~1.3.10",
-    "PreloadJS": "~0.6.1",
-    "SoundJS": "~0.6.1",
-    "progressbar.js": "~0.9.0",
-    "codemirror": "~4.8.0",
-    "ember-cli-codemirror-shim": "~0.0.1",
-    "font-awesome": "~4.5.0"
+    "ember-qunit-notifications": "0.1.0"
   }
 }
