--- a/.jshintrc
+++ b/.jshintrc
@@ -2,10 +2,7 @@
   "predef": [
     "document",
     "window",
-    "-Promise",
-    "require",
-    "PerfectScrollbar",
-    "loki"
+    "-Promise"
   ],
   "browser": true,
   "boss": true,
