--- a/package.json
+++ b/package.json
@@ -18,53 +18,40 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^4.1.5",
-    "broccoli-asset-rev": "^2.2.0",
+    "babel-eslint": "^6.0.4",
+    "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "0.7.1",
-    "ember-cli": "^2.4.1",
+    "ember-cli": "2.5.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-eslint": "1.3.0",
-    "ember-cli-font-awesome": "1.4.2",
+    "ember-cli-eslint": "1.4.0",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-moment-shim": "1.1.0",
-    "ember-cli-qunit": "^1.2.1",
+    "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-moment-shim": "1.2.0",
+    "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.4.0",
+    "ember-data": "^2.5.0",
     "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "ember-hook": "https://github.com/Ticketfly/ember-hook#57e73620e92dfadf8c4234b075b1418c89875e3b",
-    "ember-i18n": "4.2.0",
-    "ember-load-initializers": "^0.5.0",
-    "ember-moment": "6.1.0",
+    "ember-export-application-global": "^1.0.5",
+    "ember-hook": "0.2.0",
+    "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "ember-try": "~0.1.2",
-    "eslint-config-ember": "0.3.0",
-    "estraverse": "^4.2.0",
-    "estraverse-fb": "^1.3.1",
-    "js-string-escape": "^1.0.0",
-    "loader.js": "^4.0.0"
+    "ember-try": "^0.2.2",
+    "loader.js": "^4.0.1"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "babel-standalone": "^1.0.0",
-    "broccoli-merge-trees": "^0.2.3",
-    "broccoli-static-compiler": "^0.2.2",
-    "ember-cli-babel": "^5.1.5",
-    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-babel": "^5.1.6",
+    "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-sass": "^5.1.0",
     "ember-get-config": "0.0.2",
     "ember-lokijs": "0.1.0",
     "ember-message-bus": "0.2.0",
     "ember-multiton-service": "0.0.6",
-    "glob": "^5.0.15",
-    "morgan": "^1.6.1",
     "velocity-animate": "^1.2.2"
   },
   "ember-addon": {
