--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "ember-addon"
   ],
   "dependencies": {
+    "broccoli-merge-trees": "^1.1.1",
+    "broccoli-static-compiler": "^0.2.2",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-sass": "^5.1.0",
